[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "provecta"
version = "0.1.0"
description = "An HTMX + WebSocket-driven UI framework for Python, powered by Starlette."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "starlette>=0.50.0",
    "uvicorn[standard]>=0.38.0",
    "watchdog>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/provecta"]

[tool.hatch.build.targets.sdist]
include = [
  "src/provecta",
  "README.md",
  "pyproject.toml",
  "logo.png",
]

